DP-186 - Add scrollbar in table details  and fix the firefox scrollbar (#187)

--- a/ui/src/assets/styles/app.scss
+++ b/ui/src/assets/styles/app.scss
@@ -1244,6 +1244,8 @@ body {
 }
 
 .box-grow {
+  overflow-y: scroll;
+  scrollbar-width: 8px;
 
   ::-webkit-scrollbar {
     width: 8px;
